--- a/#src/pug/pages/ct_referenses/ind.html
+++ b/#src/pug/pages/ct_referenses/ind.html
@@ -1,9 +1,33 @@
-<div class="box-1">
-	Некоторый контент
-</div>
-<div class="box-2">
-	<div class="box-title">
-		Заголовок
+<footer class='footer'>
+	<div class="footer__container">
+		<div class="contacts__logo">
+			Гусли
+		</div>
+		<div class="footer__column">
+			<div class="contacts footer__contacts">
+				<div class="contacts__item">
+					<i class='icon-location'></i>
+					<p>Россия, Калужская область, г. Обнинск, Проспект Ленина, 137, к. 4, подъезд 3, оф. 260</p>
+				</div>
+				<div class="contacts__item">
+					<i class="icon-phone-call"></i>
+					<div>+7 910 604-44-24</div>
+				</div>
+				<div class="contacts__item">
+					<i class="icon-mail"></i>
+					<div>studio@obninsk-gusli.ru</div>
+				</div>
+			</div>
+
+		</div>
+
 	</div>
-	Некоторый контент
-</div>
+	<div class="footer__footer">
+		<div class="footer__title">МЫ В СОЦИАЛЬНЫХ СЕТЯХ</div>
+		<div class="community footer__community"></div>
+		<div class="community__icon"><i class="icon-whatsapp"></i></div>
+		<div class="community__icon"><i class="icon-vk-brand"></i></div>
+		<div class="community__icon"><i class="icon-telegram-fly"></i></div>
+		<div class="community__icon"><i class="icon-youtube"></i></div>
+	</div>
+</footer>
