--- a/#src/pug/pages/ct_referenses/ind.html
+++ b/#src/pug/pages/ct_referenses/ind.html
@@ -1,33 +1,38 @@
-<footer class='footer'>
-	<div class="footer__container">
-		<div class="contacts__logo">
-			Гусли
-		</div>
-		<div class="footer__column">
-			<div class="contacts footer__contacts">
-				<div class="contacts__item">
-					<i class='icon-location'></i>
-					<p>Россия, Калужская область, г. Обнинск, Проспект Ленина, 137, к. 4, подъезд 3, оф. 260</p>
-				</div>
-				<div class="contacts__item">
-					<i class="icon-phone-call"></i>
-					<div>+7 910 604-44-24</div>
-				</div>
-				<div class="contacts__item">
-					<i class="icon-mail"></i>
-					<div>studio@obninsk-gusli.ru</div>
-				</div>
-			</div>
-
-		</div>
-
-	</div>
-	<div class="footer__footer">
-		<div class="footer__title">МЫ В СОЦИАЛЬНЫХ СЕТЯХ</div>
-		<div class="community footer__community"></div>
-		<div class="community__icon"><i class="icon-whatsapp"></i></div>
-		<div class="community__icon"><i class="icon-vk-brand"></i></div>
-		<div class="community__icon"><i class="icon-telegram-fly"></i></div>
-		<div class="community__icon"><i class="icon-youtube"></i></div>
-	</div>
-</footer>
+<div class="demo-content vertical penner-equations-demo">
+	<div class="el square stretched easing-easeInQuad" style="transform: translateY(40.8312px);"></div>
+	<div class="el square stretched easing-easeInCubic" style="transform: translateY(47.2237px);"></div>
+	<div class="el square stretched easing-easeInQuart" style="transform: translateY(49.1593px);"></div>
+	<div class="el square stretched easing-easeInQuint" style="transform: translateY(49.7454px);"></div>
+	<div class="el square stretched easing-easeInSine" style="transform: translateY(38.9001px);"></div>
+	<div class="el square stretched easing-easeInExpo" style="transform: translateY(49.2034px);"></div>
+	<div class="el square stretched easing-easeInCirc" style="transform: translateY(45.3054px);"></div>
+	<div class="el square stretched easing-easeInBack" style="transform: translateY(60.0086px);"></div>
+	<div class="el square stretched easing-easeOutQuad" style="transform: translateY(-1.39122px);"></div>
+	<div class="el square stretched easing-easeOutCubic" style="transform: translateY(-16.11px);"></div>
+	<div class="el square stretched easing-easeOutQuart" style="transform: translateY(-26.3719px);"></div>
+	<div class="el square stretched easing-easeOutQuint" style="transform: translateY(-33.5265px);"></div>
+	<div class="el square stretched easing-easeOutSine" style="transform: translateY(4.20951px);"></div>
+	<div class="el square stretched easing-easeOutExpo" style="transform: translateY(-37.7403px);"></div>
+	<div class="el square stretched easing-easeOutCirc" style="transform: translateY(-21.6877px);"></div>
+	<div class="el square stretched easing-easeOutBack" style="transform: translateY(-45.5474px);"></div>
+	<div class="el square stretched easing-easeInBounce" style="transform: translateY(42.4139px);"></div>
+	<div class="el square stretched easing-easeInOutQuad" style="transform: translateY(31.6624px);"></div>
+	<div class="el square stretched easing-easeInOutCubic" style="transform: translateY(38.8948px);"></div>
+	<div class="el square stretched easing-easeInOutQuart" style="transform: translateY(43.2747px);"></div>
+	<div class="el square stretched easing-easeInOutQuint" style="transform: translateY(45.9271px);"></div>
+	<div class="el square stretched easing-easeInOutSine" style="transform: translateY(29.0323px);"></div>
+	<div class="el square stretched easing-easeInOutExpo" style="transform: translateY(46.7513px);"></div>
+	<div class="el square stretched easing-easeInOutCirc" style="transform: translateY(39.7885px);"></div>
+	<div class="el square stretched easing-easeInOutBack" style="transform: translateY(53.3594px);"></div>
+	<div class="el square stretched easing-easeInOutBounce" style="transform: translateY(46.1279px);"></div>
+	<div class="el square stretched easing-easeOutBounce" style="transform: translateY(-19.3389px);"></div>
+	<div class="el square stretched easing-easeOutInQuad" style="transform: translateY(7.77757px);"></div>
+	<div class="el square stretched easing-easeOutInCubic" style="transform: translateY(3.06747px);"></div>
+	<div class="el square stretched easing-easeOutInQuart" style="transform: translateY(1.20981px);"></div>
+	<div class="el square stretched easing-easeOutInQuint" style="transform: translateY(0.47715px);"></div>
+	<div class="el square stretched easing-easeOutInSine" style="transform: translateY(9.2922px);"></div>
+	<div class="el square stretched easing-easeOutInExpo" style="transform: translateY(0.751506px);"></div>
+	<div class="el square stretched easing-easeOutInCirc" style="transform: translateY(4.05306px);"></div>
+	<div class="el square stretched easing-easeOutInBack" style="transform: translateY(-6.35272px);"></div>
+	<div class="el square stretched easing-easeOutInBounce" style="transform: translateY(11.1321px);"></div>
+</div>
