--- a/#src/pug/pages/pages/ind.html
+++ b/#src/pug/pages/pages/ind.html
@@ -1,38 +1,72 @@
-<div class="demo-content vertical penner-equations-demo">
-	<div class="el square stretched easing-easeInQuad" style="transform: translateY(40.8312px);"></div>
-	<div class="el square stretched easing-easeInCubic" style="transform: translateY(47.2237px);"></div>
-	<div class="el square stretched easing-easeInQuart" style="transform: translateY(49.1593px);"></div>
-	<div class="el square stretched easing-easeInQuint" style="transform: translateY(49.7454px);"></div>
-	<div class="el square stretched easing-easeInSine" style="transform: translateY(38.9001px);"></div>
-	<div class="el square stretched easing-easeInExpo" style="transform: translateY(49.2034px);"></div>
-	<div class="el square stretched easing-easeInCirc" style="transform: translateY(45.3054px);"></div>
-	<div class="el square stretched easing-easeInBack" style="transform: translateY(60.0086px);"></div>
-	<div class="el square stretched easing-easeOutQuad" style="transform: translateY(-1.39122px);"></div>
-	<div class="el square stretched easing-easeOutCubic" style="transform: translateY(-16.11px);"></div>
-	<div class="el square stretched easing-easeOutQuart" style="transform: translateY(-26.3719px);"></div>
-	<div class="el square stretched easing-easeOutQuint" style="transform: translateY(-33.5265px);"></div>
-	<div class="el square stretched easing-easeOutSine" style="transform: translateY(4.20951px);"></div>
-	<div class="el square stretched easing-easeOutExpo" style="transform: translateY(-37.7403px);"></div>
-	<div class="el square stretched easing-easeOutCirc" style="transform: translateY(-21.6877px);"></div>
-	<div class="el square stretched easing-easeOutBack" style="transform: translateY(-45.5474px);"></div>
-	<div class="el square stretched easing-easeInBounce" style="transform: translateY(42.4139px);"></div>
-	<div class="el square stretched easing-easeInOutQuad" style="transform: translateY(31.6624px);"></div>
-	<div class="el square stretched easing-easeInOutCubic" style="transform: translateY(38.8948px);"></div>
-	<div class="el square stretched easing-easeInOutQuart" style="transform: translateY(43.2747px);"></div>
-	<div class="el square stretched easing-easeInOutQuint" style="transform: translateY(45.9271px);"></div>
-	<div class="el square stretched easing-easeInOutSine" style="transform: translateY(29.0323px);"></div>
-	<div class="el square stretched easing-easeInOutExpo" style="transform: translateY(46.7513px);"></div>
-	<div class="el square stretched easing-easeInOutCirc" style="transform: translateY(39.7885px);"></div>
-	<div class="el square stretched easing-easeInOutBack" style="transform: translateY(53.3594px);"></div>
-	<div class="el square stretched easing-easeInOutBounce" style="transform: translateY(46.1279px);"></div>
-	<div class="el square stretched easing-easeOutBounce" style="transform: translateY(-19.3389px);"></div>
-	<div class="el square stretched easing-easeOutInQuad" style="transform: translateY(7.77757px);"></div>
-	<div class="el square stretched easing-easeOutInCubic" style="transform: translateY(3.06747px);"></div>
-	<div class="el square stretched easing-easeOutInQuart" style="transform: translateY(1.20981px);"></div>
-	<div class="el square stretched easing-easeOutInQuint" style="transform: translateY(0.47715px);"></div>
-	<div class="el square stretched easing-easeOutInSine" style="transform: translateY(9.2922px);"></div>
-	<div class="el square stretched easing-easeOutInExpo" style="transform: translateY(0.751506px);"></div>
-	<div class="el square stretched easing-easeOutInCirc" style="transform: translateY(4.05306px);"></div>
-	<div class="el square stretched easing-easeOutInBack" style="transform: translateY(-6.35272px);"></div>
-	<div class="el square stretched easing-easeOutInBounce" style="transform: translateY(11.1321px);"></div>
+<div class="moto-widget moto-widget-container moto-container_header_58b6d51c4" data-widget="container"
+	data-container="container" data-css-name="moto-container_header_58b6d51c4" data-bg-position="left top">
+	<div data-widget-id="wid__audio_player__5aa0cf4eda074"
+		class="moto-widget moto-widget-audio_player moto-media-player moto-preset-default moto-spacing-top-auto moto-spacing-right-auto moto-spacing-bottom-auto moto-spacing-left-auto "
+		data-widget="audio_player" data-preset="default">
+		<div class="moto-media-player-container"
+			data-buttons="{&quot;playpause&quot;:true,&quot;stop&quot;:true,&quot;muted&quot;:true,&quot;loop&quot;:true,&quot;download&quot;:false}">
+			<span class="mejs-offscreen">Audio Player</span>
+			<div id="mep_0" class="mejs-container mejs-container-keyboard-inactive mejs-audio" tabIndex="0" role="application"
+				aria-label="Audio Player" style={{ minWidth: '124px' }}>
+				<div class="mejs-inner">
+					<div class="mejs-mediaelement">
+						<mediaelementwrapper id="mejs_03210947812924769">
+							<audio preload="metadata" loop id="mejs_03210947812924769_html5">
+								<source src="/mt-demo/59400/59460/mt-content/uploads/2017/03/full-v.mp3" type="audio/mpeg"
+									title="Full V.mp3" />
+							</audio>
+						</mediaelementwrapper>
+					</div>
+					<div class="mejs-layers">
+						<div class="mejs-poster mejs-layer" style={{ display: 'none' }}></div>
+					</div>
+					<div class="mejs-controls">
+						<div class="mejs-button mejs-playpause-button mejs-play">
+							<button type="button" aria-controls="mep_0" title="" aria-label="" tabIndex="0"></button>
+						</div>
+						<div class="mejs-button mejs-stop-button mejs-stop">
+							<button type="button" aria-controls="mep_0" title="" aria-label=""></button>
+						</div>
+						<div class="mejs-time-rail">
+							<span class="mejs-time-total mejs-time-slider" role="slider" tabIndex="0" aria-label="Time Slider"
+								aria-valuemin="0" aria-valuemax="0" aria-valuenow="0" aria-valuetext="00:00">
+								<span class="mejs-time-buffering" style={{ display: 'none' }}></span>
+								<span class="mejs-time-loaded"></span>
+								<span class="mejs-time-current" style={{ transform: 'scaleX(0)' }}></span>
+								<span class="mejs-time-hovered no-hover"></span>
+								<span class="mejs-time-handle" style={{ transform: 'translateX(0px)' }}>
+									<span class="mejs-time-handle-content"></span>
+								</span>
+								<span class="mejs-time-float">
+									<span class="mejs-time-float-current">00:00</span>
+									<span class="mejs-time-float-corner"></span>
+								</span>
+							</span>
+							<div class="mejs-moto-track-name" title="Full V.mp3">Full V.mp3</div>
+							<div class="mejs-time" role="timer" aria-live="off">
+								<span class="mejs-currenttime">00:00</span>
+								<span>/</span>
+								<span class="mejs-duration">02:06</span>
+							</div>
+						</div>
+						<div class="mejs-button mejs-volume-button mejs-mute" style={{ display: 'block' }}>
+							<button type="button" aria-controls="mep_0" title="Mute" aria-label="Mute" tabIndex="0"></button>
+							<a class="mejs-horizontal-volume-slider" href="javascript:void(0);" aria-label="Volume Slider"
+								aria-valuemin="0" aria-valuemax="100" aria-valuenow="100" role="slider">
+								<span class="mejs-offscreen">Use Up/Down Arrow keys to increase or decrease volume.</span>
+								<div class="mejs-horizontal-volume-total">
+									<div class="mejs-horizontal-volume-current" style={{ left: '0px' , width: '100%' }}></div>
+									<div class="mejs-horizontal-volume-handle" style={{ left: '100%' , marginLeft: '-3px' }}></div>
+								</div>
+							</a>
+						</div>
+						<div class="mejs-button mejs-moto-loop-button mejs-button_active">
+							<button></button>
+						</div>
+						<div class="mejs-button mejs-moto-last-hidden-button"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
