--- a/#src/pug/pages/pages/ind.html
+++ b/#src/pug/pages/pages/ind.html
@@ -1,30 +1,30 @@
-<div class="about">
-	<div class="about__bg-image _ibg">
-		<picture>
-			{isWebpSupported()
-			? <img src="../img/about/ab-img-01.webp" type="image/webp" />
-			: <img src="../img/about/ab-img-01.png" alt="image" />}
-		</picture>
-	</div>
-	<div class="about__container">
-		<div class="content-body about__content">
-			<div class="content-body">
-				<div class="content-body__column"></div>
-				<div class="content-body__column">
-					<div class="content-body__text">
-						<div class="content-body__title">
-							<h1>OUR STUDIO</h1>
-							<p>Опишите свой проект за считанные секунды. Получите предложения от ведущих профессионалов. Выберите и
-								наймите своего профессионала. Получайте потрясающе звучащие треки!</p>
-							<span>Если у вас есть талант, но не хватает профессионального оборудования, чтобы продемонстрировать свой
-								потенциал, у нас есть все необходимое для удовлетворения ваших художественных потребностей. Наша студия
-								не просто оснащена самыми передовыми инструментами, но и создает особое настроение для человека, который
-								ими пользуется. Здесь царит очень дружелюбная атмосфера, позволяющая вам расслабиться и на 100%
-								насладиться процессом записи.</span>
-						</div>
-					</div>
-				</div>
-			</div>
+<div class="achieve-items">
+	<div class="achieve-items__body">
+		<div class="achieve-items__image">
+			<picture>
+				{isWebpSupported()
+				? <img src="../img/about/slide/sert1.webp" type="image/webp" />
+				: <img src="../img/about/slide/sert1.png" alt="image" />}
+			</picture>
+		</div>
+		<div class="achieve-items__image">
+			<picture>
+				{isWebpSupported()
+				? <img src="../img/about/slide/sert2.webp" type="image/webp" />
+				: <img src="../img/about/slide/sert2.png" alt="image" />}
+			</picture>
+		</div>
+		<div class="achieve-items__image">
+			<img src="../img/about/slide/sert.png" alt="image" />
+		</div>
+		<div class="achieve-items__image">
+			<img src="../img/about/slide/sert.png" alt="image" />
+		</div>
+		<div class="achieve-items__image">
+			<img src="../img/about/slide/sert.png" alt="image" />
+		</div>
+		<div class="achieve-items__image">
+			<img src="../img/about/slide/sert.png" alt="image" />
 		</div>
 	</div>
 </div>
